# fid

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
lib/oatpp/utility/: install-oatpp-modules.sh
src/: CMakeLists.txt
src/api/: CMakeLists.txt
src/api/include/oatpp-test/api/: server.h
src/api/src/: app_component.h  error_handler.cpp  error_handler.h  server.cpp  status_service.cpp  status_service.h  swagger_component.h
src/api/src/controller/: status_controller.h
src/api/src/dto/: status_dto.h
src/app/: test1.cpp
src/apps/: CMakeLists.txt  rest-api.cpp
